Crud Autor con formulario Terminado

--- a/PL/PL.csproj
+++ b/PL/PL.csproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\ML\ML.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Autor\Image\" />
+  </ItemGroup>
+
 </Project>
